--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pagado"
+                android:textSize="8pt"
+                android:layout_marginHorizontal="16dp"
                 />
 
             <EditText
@@ -40,6 +42,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:hint="@string/introduce_numero_socio"
+                android:inputType="number"
+                android:layout_marginEnd="16dp"
                 />
         </LinearLayout>
 
@@ -49,7 +53,7 @@
             android:layout_height="wrap_content"
             android:text="@string/buscar"
             android:layout_marginHorizontal="40dp"
-            android:onClick="BuscarSocio" />
+            android:onClick="FiltrarSocios" />
 
         <ListView
             android:id="@+id/lvLista"
