--- a/app/src/main/res/layout/socio_list_item.xml
+++ b/app/src/main/res/layout/socio_list_item.xml
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginStart="16dp"
+        android:editable="false"
         />
 
 
