--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:orientation="horizontal">
 
             <CheckBox
+                android:checked="true"
                 android:id="@+id/tbPagado"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,14 +47,31 @@
                 android:layout_marginEnd="16dp"
                 />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/botonBuscar"
+        <LinearLayout
+            android:id="@+id/btnsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/buscar"
-            android:layout_marginHorizontal="40dp"
-            android:onClick="FiltrarSocios" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/botonBuscar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buscar"
+                android:layout_marginHorizontal="40dp"
+                android:onClick="FiltrarSocios"
+                android:layout_weight="0.6"
+                />
+
+            <Button
+                android:id="@+id/botonAñadir"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/añadir_socio"
+                android:layout_marginHorizontal="40dp"
+                android:onClick="AbrirAñadirSocio"
+                android:layout_weight="0.5"/>
+        </LinearLayout>
 
         <ListView
             android:id="@+id/lvLista"
