--- a/app/src/main/res/layout/socio_list_item.xml
+++ b/app/src/main/res/layout/socio_list_item.xml
@@ -33,7 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginStart="16dp"
-        android:editable="false"
+        android:layout_marginEnd="16dp"
+        android:clickable="false"
         />
 
 
