Añadir socio completo (que se suba a realtime database)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,12 +64,11 @@
                 />
 
             <Button
-                android:id="@+id/botonAñadir"
+                android:id="@+id/botonAnadir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/añadir_socio"
                 android:layout_marginHorizontal="40dp"
-                android:onClick="AbrirAñadirSocio"
                 android:layout_weight="0.5"/>
         </LinearLayout>
 
