--- a/app/src/main/res/layout/socio_list_item.xml
+++ b/app/src/main/res/layout/socio_list_item.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:descendantFocusability = "blocksDescendants">
+
 
     <TextView
         android:id="@+id/tvNumero"
@@ -29,7 +31,7 @@
 
     <CheckBox
         android:id="@+id/tbPagado"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginStart="16dp"
