--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF2D00</color>
     <color name="yellow">#E9C003</color>
+    <color name="blue">#0072c0</color>
 </resources>
